--- a/package.json
+++ b/package.json
@@ -8,11 +8,23 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@react-native-community/masked-view": "0.1.10",
+    "@react-navigation/bottom-tabs": "^5.11.8",
+    "@react-navigation/native": "^5.9.3",
+    "@react-navigation/stack": "^5.14.3",
     "expo": "~40.0.0",
+    "expo-av": "^9.0.0",
     "expo-status-bar": "~1.0.3",
+    "expo-video-player": "^1.6.1",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-40.0.1.tar.gz",
+    "react-native-gesture-handler": "~1.8.0",
+    "react-native-reanimated": "~1.13.0",
+    "react-native-safe-area-context": "3.1.9",
+    "react-native-screens": "~2.15.2",
+    "react-native-vector-icons": "^8.1.0",
+    "react-native-video": "^5.1.1",
     "react-native-web": "~0.13.12"
   },
   "devDependencies": {
@@ -20,6 +32,8 @@
     "@types/react": "~16.9.35",
     "@types/react-dom": "~16.9.8",
     "@types/react-native": "~0.63.2",
+    "@types/react-native-vector-icons": "^6.4.6",
+    "@types/react-native-video": "^5.0.4",
     "typescript": "~4.0.0"
   },
   "private": true
