--- a/package.json
+++ b/package.json
@@ -20,8 +20,10 @@
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-40.0.1.tar.gz",
     "react-native-gesture-handler": "~1.8.0",
+    "react-native-modalize": "^2.0.8",
     "react-native-options-menu": "^2.0.2",
     "react-native-paper": "^4.7.2",
+    "react-native-portalize": "^1.0.7",
     "react-native-reanimated": "~1.13.0",
     "react-native-safe-area-context": "3.1.9",
     "react-native-screens": "~2.15.2",
