--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@react-navigation/stack": "^5.14.3",
     "expo": "~40.0.0",
     "expo-av": "^9.0.0",
+    "expo-linear-gradient": "~8.4.0",
     "expo-status-bar": "~1.0.3",
     "expo-video-player": "^1.6.1",
     "react": "16.13.1",
