--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "expo-linear-gradient": "~8.4.0",
     "expo-status-bar": "~1.0.3",
     "expo-video-player": "^1.6.1",
+    "expo-video-thumbnails": "~4.4.0",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-40.0.1.tar.gz",
@@ -28,9 +29,11 @@
     "react-native-reanimated": "~1.13.0",
     "react-native-safe-area-context": "3.1.9",
     "react-native-screens": "~2.15.2",
+    "react-native-sticky-header-flatlist": "^0.1.3",
     "react-native-vector-icons": "^8.1.0",
     "react-native-video": "^5.1.1",
-    "react-native-web": "~0.13.12"
+    "react-native-web": "~0.13.12",
+    "react-sticky": "^6.0.3"
   },
   "devDependencies": {
     "@babel/core": "~7.9.0",
@@ -39,6 +42,7 @@
     "@types/react-native": "~0.63.2",
     "@types/react-native-vector-icons": "^6.4.6",
     "@types/react-native-video": "^5.0.4",
+    "@types/react-sticky": "^6.0.3",
     "typescript": "~4.0.0"
   },
   "private": true
